--- a/index.html
+++ b/index.html
@@ -442,7 +442,49 @@
             </article>
         </section>
     </div>
-    <!-- TODO: fix hover/focus -->
+    
+    <section id="normas" class="container p-3">
+        <h2 class="mt-5 my-2 dividered dividered-center dividered-danger section-title text-center">Normas de la competición</h2>
+        <div class="row justify-content-md-center">
+            <div class="col col-sm-9">
+                <p class="">
+                    <ol class="">
+                        <li class="">
+                            <p>Un equipo puede estar formado por un máximo de cuatro miembros. Cada miembro debe cumplir los requisitos de las bases de la competición respecto a edad y estudios.
+                            </p>
+                        </li>
+                        <li class="">
+                            <p>Para registrarse correctamente se debe estar en un equipo en seeknhack.hackrocks.com, además de haber enviado el correspondiente mail a ctf.seeknhack@gmail.com con la matrícula del grado/máster, como bien se indica al completar la inscripción.</p>
+                        </li>
+                        <li class="">
+                            <p>El equipo y los nombres de usuario serán moderados. No se permiten nombres ofensivos ni malsonantes.</p>
+                        </li>
+                        <li class="">
+                            <p>No se permite compartir flags con otros equipos ni la ayuda de personas externas.</p>
+                        </li>
+                        <li class="">
+                            <p>La infraestructura está fuera de los límites y no debe ser atacada. En caso de duda, ponte en contacto con nosotros antes de comenzar el ataque.</p>
+                        </li>
+                        <li class="">
+                            <p>Impedir que otros equipos obtengan la flag tampoco está permitido. Si se encuentra un fallo en un desafío o en la infraestructura, se nos debe contactar directamente.</p>
+                        </li>
+                        <li class="">
+                            <p>En líneas generales, se debe de jugar limpio y mantener una actitud respetuosa hacia el resto de participantes.</p>
+                        </li>
+                    </ol>
+                </p><br>
+                <p class="text-center">
+                    Ante cualquier infracción, los equipos infractores serán descalificados y expulsados de la competición. La competición estará monitorizada en todo momento (conexiones IP y organizadores vigilando). En caso de sospecha, se podrá pedir a los participantes su colaboración.
+                    <br><br>
+                    A no ser que se indique lo contrario, el formato de la flag es: <b>CTFUni{}</b>
+                    <br><br>
+                Cualquier duda podéis preguntarnos por <a class="linknormas" href="mailto:ctf.seeknhack@gmail.com">correo electrónico</a>, por el <a class="linknormas" href="https://t.me/CTFuni">canal de Telegram</a> o presencialmente durante la competición.
+                ¡Recordad que es necesario llevar vuestro propio ordenador portátil!
+                </p>
+            </div>
+        </div>
+    </section>
+
     <section class="faq">
         <div class="our-faq-wrapper">
             <div class="container">
