--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     A no ser que se indique lo contrario, el formato de la flag es: <b>CTFUni{}</b>
                     <br><br>
                 Cualquier duda podéis preguntarnos por <a class="linknormas" href="mailto:ctf.seeknhack@gmail.com">correo electrónico</a>, por el <a class="linknormas" href="https://t.me/CTFuni">canal de Telegram</a> o presencialmente durante la competición.
-                ¡Recordad que es necesario llevar vuestro propio ordenador portátil!
+                <b>¡Recordad que es necesario llevar vuestro propio ordenador portátil!</b>
                 </p>
             </div>
         </div>
